
Improvements: 
- Added support for placeholders in the /team chat syntax (#515)
- Improved issues with Dutch translations (#512) - Credit Ceymikey

Bug fixes: 
- Fixed bug causing /team top to incorrectly rank teams (#513)
- Fixed bug with /team ban attempting to notify offline players (#516)
- Improved the error message for when team data is desynced (#517)

4.8.4:

Features:
- Updated Ultimate claims version supported to v2.0.1 (#496) - NOTE: Older versions of ultimate claims are no longer supported
- Added new Events to the BetterTeams API - Credit EarthCow (#524)
- Added an option to announce team joining, leaving and disbanding - Credit EarthCow (#541, #539)
- Added placeholders to get members at a specific rank - Credit EarthCow (#542, #537)
- Added /teama ally and /teama neutral (#523)

Bug Fixes:
- Fixed issue with urls causing a 404 - Credit Ceymikey (#522)
- Fixed bug with /team setowner - Credit EarthCow(#544, #531)

4.9.0:

Features:
- Added chat prefix to go from global to team or ally chat - Credit EarthCow (#545, #314)
	- ! is for team chat, ? is for ally chat. Both are configurable by administrators
- Added placeholders for positionscore, positionbal and positionmembmers, to show the teams position within the leaderboard - Credit EarthCow (#549, #538)
- Added further functionality to the /teama teleport command - Teleport all teams home, teleport everyone in a team to a given location etc. - Credit EarthCow (#550, #534)
- Added the ability to /teama purge a team's balance as well as score (#521)
- Added pages to help messages and hover command suggestions (#310)

Improvements:
- Replaced %s with {0}, {1} etc. in messages.yml for clearer usage and support for reordering of placeholders - Credit EarthCow (#551, #169)
- Support translation of command arguments (#553)
- Support the translation of admin commands
- Color player names in /team info based on if they are online (#469)

Headings: 
Features: 

Improvements:

Bug Fixes: 
