@@ -60,7 +60,8 @@ name.view: '&6Team name: {0}'
 name.exists: '&4That team already exists'
 name.noPerm: '&4You do not have permission to change your team name'
 invite.success: '&6That player has been invited'
-invite.invite: '&6You have been invited to join team {0} do &b/team join <team> &6 to join the team'
+invite.invite: '&6You have been invited to join team {0} do &b/team join {0} &6 to join the team'
+invite.hover: '&6Click to join &b{0}'
 invite.inTeam: '&6That player is already in a team'
 invite.banned: '&6That player is banned from your team'
 invite.full: '&6Your team is maximum size, kick someone out before inviting more people'
